--- a/style.css
+++ b/style.css
@@ -1,21 +1,22 @@
-title, h1{
-  color: pink;
+title, h1,p{
+  color: #541b3d;
   text-align: center;
 }
 body{
 		margin: 2%;
-		background-color: white;
+		background-color: #ebe4d2;
     font-family: verdana;
 }
+
 #image{
     line-height:650px;
 		width: 100%;
     height: 669px;
-		border:5px solid pink;
+		border:5px solid #541b3d;
 		margin:0 auto;
     background-color: pink;
     background-image: url('');
-    color:#FFFFFF;
+    color:#541b3d;
     text-align: center;
     background-size: 100%;
     margin-bottom:25px;
@@ -25,7 +26,7 @@ body{
 .preview{
 		width:10%;
 		margin-left:17%;
-    border: 5px solid pink;
+    border: 5px solid #541b3d;
     opacity: .60;
 }
 .preview:focus{
